6849984: Value methods for platform dependent math functions constant fold incorrectly

Reviewed-by: kvn, twisti